--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "eslint": "^4.15.0",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^1.7.1",
-    "eslint-plugin-vue": "^4.0.0"
+    "eslint-plugin-vue": "^4.0.0",
+    "json-loader": "^0.5.7",
+    "yaml-loader": "^0.5.0"
   }
 }
