--- a/package.json
+++ b/package.json
@@ -13,16 +13,16 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
-    "nuxt": "^1.0.0",
-    "vue-i18n": "^7.3.2"
+    "nuxt": "2.2.0",
+    "vue-i18n": "8.3.0"
   },
   "devDependencies": {
-    "babel-eslint": "^8.2.1",
-    "eslint": "^4.15.0",
-    "eslint-friendly-formatter": "^3.0.0",
-    "eslint-loader": "^1.7.1",
-    "eslint-plugin-vue": "^4.0.0",
-    "json-loader": "^0.5.7",
-    "yaml-loader": "^0.5.0"
+    "babel-eslint": "10.0.1",
+    "eslint": "5.8.0",
+    "eslint-friendly-formatter": "4.0.1",
+    "eslint-loader": "2.1.1",
+    "eslint-plugin-vue": "5.0.0-beta.3",
+    "json-loader": "0.5.7",
+    "yaml-loader": "0.5.0"
   }
 }
