--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cv-nuxt",
   "version": "1.0.0",
-  "description": "Nuxt.js project",
+  "description": "CV Alexey Stratan",
   "author": "Alexey Stratan <alexey.stratan@gmail.com>",
   "private": true,
   "scripts": {
@@ -9,19 +9,13 @@
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "precommit": "npm run lint"
   },
   "dependencies": {
-    "nuxt": "2.2.0",
-    "vue-i18n": "8.3.0"
+    "nuxt": "2.4.3",
+    "vue-i18n": "8.8.0"
   },
   "devDependencies": {
-    "babel-eslint": "10.0.1",
-    "eslint": "5.8.0",
-    "eslint-friendly-formatter": "4.0.1",
-    "eslint-loader": "2.1.1",
-    "eslint-plugin-vue": "5.0.0-beta.3",
     "json-loader": "0.5.7",
     "yaml-loader": "0.5.0"
   }
